--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <p id="resultado"></p>
 
   <script>
-    const scriptURL = "AQUÍ_VA_TU_URL_DEL_SCRIPT";
+    const scriptURL = https://script.google.com/macros/s/AKfycbyOnFX5wF4VH2yQOlGhTwACNnbOyOXKAxJGzbY-l-SkMaxaAMbY7YnJ2nq7qoY21cjUFw/exec;
 
     function enviarQR(qrData) {
       fetch(scriptURL, {
