--- a/index.html
+++ b/index.html
@@ -14,102 +14,100 @@
     }
     h2 {
       text-align: center;
-      color: #333;
     }
-    label {
-      display: block;
-      margin-top: 10px;
-    }
-    input {
+    input, button {
       width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    button {
-      margin-top: 15px;
-      width: 100%;
-      padding: 12px;
-      background-color: #007BFF;
-      color: white;
-      border: none;
-      border-radius: 4px;
+      padding: 10px;
+      margin: 8px 0;
       font-size: 16px;
     }
     #reader {
-      margin-top: 20px;
+      width: 100%;
+      margin-top: 10px;
     }
     #resultado {
-      margin-top: 20px;
-      font-weight: bold;
-      color: green;
       text-align: center;
+      margin-top: 15px;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
+
   <h2>Registro de Traslado</h2>
 
-  <label for="cedula">Cédula:</label>
-  <input type="text" id="cedula" placeholder="Ej: 12345678">
+  <input type="text" id="cedula" placeholder="Cédula" required>
+  <input type="text" id="id_jefe" placeholder="ID Jefe" required>
 
-  <label for="ubicacion">Ubicación:</label>
-  <input type="text" id="ubicacion" placeholder="Ej: Barrio Sucre">
+  <button onclick="iniciarEscaneo()">Escanear QR y Registrar</button>
 
-  <label for="id_jefe">ID Jefe:</label>
-  <input type="text" id="id_jefe" placeholder="Ej: JEF-001">
-
-  <button onclick="iniciarEscaneo()">Escanear Código QR</button>
-
-  <div id="reader" style="width: 100%; display: none;"></div>
+  <div id="reader" style="display: none;"></div>
 
   <p id="resultado"></p>
+  <div id="otraVez" style="display: none; text-align: center;">
+    <a href="" onclick="location.reload()">Registrar otro traslado</a>
+  </div>
 
   <script>
-    const scriptURL = "https://script.google.com/macros/s/AKfycbyOnFX5wF4VH2yQOlGhTwACNnbOyOXKAxJGzbY-l-SkMaxaAMbY7YnJ2nq7qoY21cjUFw/exec";
+    const formURL = "https://docs.google.com/forms/d/e/1FAIpQLSeMlTm89RoSK6dyGnUJ0TxSIed3n_lXElQFgP8dSMaub_WS_A/formResponse";
+    const entryCedula = "entry.668942367";
+    const entryUbicacion = "entry.981761500";
+    const entryIDJefe = "entry.817016646";
+    const entryQR = "entry.256825743";
+
+    let ubicacionActual = "";
+
+    // Obtener la ubicación al cargar
+    navigator.geolocation.getCurrentPosition(
+      pos => {
+        const lat = pos.coords.latitude.toFixed(6);
+        const lng = pos.coords.longitude.toFixed(6);
+        ubicacionActual = `${lat}, ${lng}`;
+      },
+      err => {
+        alert("No se pudo obtener la ubicación GPS.");
+      }
+    );
 
     function iniciarEscaneo() {
       const cedula = document.getElementById("cedula").value.trim();
-      const ubicacion = document.getElementById("ubicacion").value.trim();
       const id_jefe = document.getElementById("id_jefe").value.trim();
 
-      if (!cedula || !ubicacion || !id_jefe) {
-        alert("Por favor completa todos los campos antes de escanear.");
+      if (!cedula || !id_jefe) {
+        alert("Por favor llena Cédula e ID Jefe.");
         return;
       }
 
       document.getElementById("reader").style.display = "block";
-      const qrScanner = new Html5Qrcode("reader");
 
+      const qrScanner = new Html5Qrcode("reader");
       qrScanner.start(
         { facingMode: "environment" },
         { fps: 10, qrbox: 250 },
-        qrData => {
+        qrCodeMessage => {
           qrScanner.stop();
           document.getElementById("reader").style.display = "none";
 
-          fetch(scriptURL, {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({
-              qr: qrData,
-              cedula: cedula,
-              ubicacion: ubicacion,
-              id_jefe: id_jefe
-            })
-          })
-          .then(res => res.text())
-          .then(msg => {
-            document.getElementById("resultado").innerText = "✔️ Registrado con éxito: " + qrData;
-          })
-          .catch(err => {
-            console.error(err);
-            document.getElementById("resultado").innerText = "❌ Error al registrar. Intenta de nuevo.";
+          const formData = new FormData();
+          formData.append(entryCedula, cedula);
+          formData.append(entryIDJefe, id_jefe);
+          formData.append(entryQR, qrCodeMessage);
+          formData.append(entryUbicacion, ubicacionActual);
+
+          fetch(formURL, {
+            method: "POST",
+            mode: "no-cors",
+            body: formData
+          }).then(() => {
+            document.getElementById("resultado").innerText = "✔️ Registrado con éxito.";
+            document.getElementById("otraVez").style.display = "block";
+          }).catch(() => {
+            document.getElementById("resultado").innerText = "❌ Error al registrar.";
           });
         }
       );
     }
   </script>
+
 </body>
 </html>
