--- a/index.html
+++ b/index.html
@@ -3,68 +3,86 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Registro de Traslados</title>
+  <title>🟣 Registro de Movilización</title>
   <script src="https://unpkg.com/html5-qrcode"></script>
   <style>
     body {
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: #e9ecef;
+      background-color: #121212;
+      color: #ffffff;
       display: flex;
       flex-direction: column;
-      align-items: center;
-      justify-content: center;
       min-height: 100vh;
     }
 
-    .card {
-      width: 100%;
-      max-width: 400px;
-      background: white;
-      padding: 24px;
-      margin: 20px;
-      border-radius: 16px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    .header {
+      display: flex;
+      align-items: center;
+      padding: 16px 24px;
+      background-color: #1e1e1e;
     }
 
-    h2 {
-      text-align: center;
-      color: #333;
-      font-size: 22px;
+    .header img {
+      width: 32px;
+      height: 32px;
+      margin-right: 12px;
+    }
+
+    .header h1 {
+      font-size: 18px;
+      font-weight: normal;
+    }
+
+    .container {
+      padding: 24px;
+      max-width: 420px;
+      margin: auto;
+      flex-grow: 1;
+    }
+
+    .instrucciones {
+      font-size: 15px;
+      line-height: 1.6;
+      background-color: #1e1e1e;
+      padding: 16px;
+      border-radius: 12px;
       margin-bottom: 20px;
     }
 
-    label {
-      font-size: 14px;
-      margin-bottom: 4px;
-      display: block;
-      color: #555;
+    .form-group {
+      margin-bottom: 16px;
     }
 
     input {
       width: 100%;
-      padding: 14px;
-      margin-bottom: 16px;
+      padding: 12px;
       font-size: 16px;
       border-radius: 8px;
-      border: 1px solid #ccc;
-      box-sizing: border-box;
+      border: none;
+      background-color: #2c2c2c;
+      color: #fff;
+    }
+
+    input::placeholder {
+      color: #999;
     }
 
     button {
       width: 100%;
       padding: 14px;
-      background-color: #28a745;
+      background-color: #7c4dff;
       border: none;
       color: white;
       font-size: 16px;
       border-radius: 8px;
       font-weight: bold;
+      margin-top: 12px;
     }
 
     button:hover {
-      background-color: #218838;
+      background-color: #651fff;
     }
 
     #reader {
@@ -76,7 +94,7 @@
       margin-top: 16px;
       text-align: center;
       font-weight: bold;
-      color: green;
+      color: #00e676;
     }
 
     #otraVez {
@@ -86,28 +104,53 @@
 
     #otraVez a {
       text-decoration: none;
-      color: #007bff;
-      font-size: 14px;
+      color: #7c4dff;
+    }
+
+    footer {
+      text-align: center;
+      font-size: 13px;
+      color: #666;
+      padding: 20px;
     }
   </style>
 </head>
 <body>
-  <div class="card">
-    <h2>Registro de Traslado</h2>
-    <label for="cedula">Cédula</label>
-    <input type="text" id="cedula" placeholder="Ej: 12345678" />
 
-    <label for="id_jefe">ID Jefe</label>
-    <input type="text" id="id_jefe" placeholder="Ej: JEF-001" />
+  <div class="header">
+    <img src="https://jaimegarage.github.io/RegistroQR/Corazonnuevo.png" alt="Logo" />
+    <h1>🟣 Registro de Movilización</h1>
+  </div>
+
+  <div class="container">
+    <div class="instrucciones">
+      🔹 Escribe la cédula del votante<br>
+      🔹 Escribe el ID del jefe de comunidad<br>
+      🔹 Escanea el QR del conductor<br>
+      🔹 Solo se registra una vez por traslado<br><br>
+      ✅ Presiona <b>“Escanear QR y Registrar”</b>
+    </div>
+
+    <div class="form-group">
+      <input type="text" id="cedula" placeholder="Cédula del votante" />
+    </div>
+    <div class="form-group">
+      <input type="text" id="id_jefe" placeholder="ID del jefe de comunidad" />
+    </div>
 
     <button onclick="iniciarEscaneo()">Escanear QR y Registrar</button>
 
     <div id="reader" style="display: none;"></div>
+
     <p id="resultado"></p>
     <div id="otraVez" style="display: none;">
       <a href="" onclick="location.reload()">Registrar otro traslado</a>
     </div>
   </div>
+
+  <footer>
+    Mérida 2025 – Registro de Movilización
+  </footer>
 
   <script>
     const formURL = "https://docs.google.com/forms/d/e/1FAIpQLSeMlTm89RoSK6dyGnUJ0TxSIed3n_lXElQFgP8dSMaub_WS_A/formResponse";
