--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       border: none;
       background-color: #2c2c2c;
       color: #fff;
+      box-sizing: border-box;
     }
 
     input::placeholder {
