--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
   <div class="wrapper">
     <div class="header">
-      <img src="https://jaimegarage.github.io/RegistroQR/Corazonnuevo.png" alt="Logo" />
+      <img src="https://jaymzdev.github.io/RegistroMovilizacion/Corazonnuevo.png" alt="Logo" />
       <h1>Registro de Movilización</h1>
     </div>
 
