--- a/index.html
+++ b/index.html
@@ -204,5 +204,12 @@
       );
     }
   </script>
+  <script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('service-worker.js')
+      .then(reg => console.log('✅ Service Worker registrado:', reg.scope))
+      .catch(err => console.error('❌ Error al registrar SW:', err));
+  }
+</script>
 </body>
 </html>
