--- a/index.html
+++ b/index.html
@@ -159,23 +159,50 @@
 
     let ubicacionActual = "";
 
-    navigator.geolocation.getCurrentPosition(
-      pos => {
-        const lat = pos.coords.latitude.toFixed(6);
-        const lng = pos.coords.longitude.toFixed(6);
-        ubicacionActual = `${lat}, ${lng}`;
-      },
-      err => {
-        alert("No se pudo obtener la ubicación GPS.");
-      }
-    );
+    async function solicitarUbicacion() {
+      return new Promise((resolve, reject) => {
+        navigator.geolocation.getCurrentPosition(
+          pos => {
+            const lat = pos.coords.latitude.toFixed(6);
+            const lng = pos.coords.longitude.toFixed(6);
+            ubicacionActual = `${lat}, ${lng}`;
+            resolve(true);
+          },
+          err => {
+            resolve(false);
+          }
+        );
+      });
+    }
 
-    function iniciarEscaneo() {
+    async function solicitarCamara() {
+      try {
+        const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+        stream.getTracks().forEach(track => track.stop());
+        return true;
+      } catch (e) {
+        return false;
+      }
+    }
+
+    async function iniciarEscaneo() {
       const cedula = document.getElementById("cedula").value.trim();
       const id_jefe = document.getElementById("id_jefe").value.trim();
 
       if (!cedula || !id_jefe) {
         alert("Por favor llena Cédula e ID Jefe.");
+        return;
+      }
+
+      const tieneCamara = await solicitarCamara();
+      if (!tieneCamara) {
+        alert("No se pudo acceder a la cámara. Por favor concede el permiso.");
+        return;
+      }
+
+      const tieneUbicacion = await solicitarUbicacion();
+      if (!tieneUbicacion) {
+        alert("No se pudo obtener la ubicación. Activa el permiso.");
         return;
       }
 
