--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
     const entryIDJefe = "entry.817016646";
     const entryQR = "entry.256825743";
 
-    let ubicacionActual = "";
+    let ubicacionActual = "NO DISPONIBLE"; // Valor por defecto
 
     async function solicitarUbicacion() {
-      return new Promise((resolve, reject) => {
+      return new Promise((resolve) => {
         navigator.geolocation.getCurrentPosition(
           pos => {
             const lat = pos.coords.latitude.toFixed(6);
@@ -169,6 +169,7 @@
             resolve(true);
           },
           err => {
+            ubicacionActual = "NO DISPONIBLE";
             resolve(false);
           }
         );
@@ -200,11 +201,7 @@
         return;
       }
 
-      const tieneUbicacion = await solicitarUbicacion();
-      if (!tieneUbicacion) {
-        alert("No se pudo obtener la ubicación. Activa el permiso.");
-        return;
-      }
+      await solicitarUbicacion(); // actualiza ubicacionActual
 
       document.getElementById("reader").style.display = "block";
 
