--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
       font-family: 'Segoe UI', sans-serif;
       background-color: #121212;
       color: #ffffff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      min-height: 100vh;
     }
 
     .wrapper {
@@ -26,7 +23,7 @@
       border-radius: 16px;
       box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
       max-width: 360px;
-      width: 90%;
+      margin: 40px auto;
     }
 
     .header {
@@ -118,7 +115,6 @@
       font-size: 14px;
     }
 
-    /* Ícono flotante de estado */
     #estadoSync {
       position: fixed;
       bottom: 16px;
