--- a/index.html
+++ b/index.html
@@ -1,668 +1,300 @@
 <!DOCTYPE html>
-
 <html lang="es">
-
 <head>
-
   <link rel="manifest" href="manifest.json" />
-
   <meta name="theme-color" content="#7c4dff" />
-
   <meta charset="UTF-8" />
-
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
   <title>🟣 Registro de Movilización</title>
-
   <script src="https://unpkg.com/html5-qrcode"></script>
-
   <style>
-
     body {
-
       margin: 0;
-
       padding: 0;
-
       font-family: 'Segoe UI', sans-serif;
-
       background-color: #121212;
-
       color: #ffffff;
-
-      display: flex;
-
-      justify-content: center;
-
-      align-items: center;
-
-      height: 100vh;
-
+      min-height: 100vh;
     }
-
-
 
     .wrapper {
-
       background: #1e1e1e;
-
       padding: 24px;
-
       border-radius: 16px;
-
       box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-
       max-width: 360px;
-
-      width: 90%;
-
+      margin: 40px auto;
     }
-
-
 
     .header {
-
       display: flex;
-
       align-items: center;
-
       margin-bottom: 20px;
-
     }
-
-
 
     .header img {
-
       width: 28px;
-
       height: 28px;
-
       margin-right: 10px;
-
     }
-
-
 
     .header h1 {
-
       font-size: 18px;
-
       font-weight: normal;
-
       margin: 0;
-
     }
-
-
 
     .instrucciones {
-
       font-size: 14px;
-
       line-height: 1.6;
-
       margin-bottom: 20px;
-
       background: #2b2b2b;
-
       padding: 16px;
-
       border-radius: 12px;
-
     }
-
-
 
     .form-group {
-
       margin-bottom: 14px;
-
     }
-
-
 
     input {
-
       width: 100%;
-
       padding: 12px;
-
       font-size: 15px;
-
       border-radius: 8px;
-
       border: none;
-
       background-color: #2c2c2c;
-
       color: #fff;
-
       box-sizing: border-box;
-
     }
-
-
 
     input::placeholder {
-
       color: #999;
-
     }
-
-
 
     button {
-
       width: 100%;
-
       padding: 14px;
-
       background-color: #7c4dff;
-
       border: none;
-
       color: white;
-
       font-size: 15px;
-
       border-radius: 8px;
-
       font-weight: bold;
-
     }
 
+    button:disabled {
+      background-color: #444;
+      cursor: not-allowed;
+    }
 
-
-    button:hover {
-
+    button:hover:enabled {
       background-color: #651fff;
-
     }
-
-
 
     #reader {
-
       margin-top: 20px;
-
       width: 100%;
-
     }
-
-
 
     #resultado {
-
       margin-top: 16px;
-
       text-align: center;
-
       font-weight: bold;
-
       color: #00e676;
-
     }
-
-
 
     #otraVez {
-
       text-align: center;
-
       margin-top: 12px;
-
     }
-
-
 
     #otraVez a {
-
       text-decoration: none;
-
       color: #7c4dff;
-
       font-size: 14px;
-
     }
-
   </style>
-
 </head>
-
 <body>
 
-
-
   <div class="wrapper">
-
     <div class="header">
-
       <img src="https://jaymzdev.github.io/RegistroMovilizacion/Corazonnuevo.png" alt="Logo" />
-
       <h1>Registro de Movilización</h1>
-
     </div>
-
-
 
     <div class="instrucciones">
-
       🔹 Escribe la cédula del votante<br>
-
       🔹 Escribe el ID del jefe de comunidad<br>
-
       🔹 Solo se registra una vez por traslado<br><br>
-
       ✅ Presiona <b>“Escanear QR y Registrar”</b>
-
     </div>
 
-
-
     <div class="form-group">
-
       <input type="text" id="cedula" placeholder="Cédula del votante" />
-
     </div>
-
     <div class="form-group">
-
       <input type="text" id="id_jefe" placeholder="ID del jefe de comunidad" />
-
     </div>
 
-
-
-    <button onclick="iniciarEscaneo()">Escanear QR y Registrar</button>
-
-
+    <button id="btnRegistrar" onclick="iniciarEscaneo()">Escanear QR y Registrar</button>
 
     <div id="reader" style="display: none;"></div>
-
     <p id="resultado"></p>
-
     <div id="otraVez" style="display: none;">
-
       <a href="" onclick="location.reload()">Registrar otro traslado</a>
-
     </div>
-
   </div>
 
-
-
   <script>
-
     const formURL = "https://docs.google.com/forms/d/e/1FAIpQLSeMlTm89RoSK6dyGnUJ0TxSIed3n_lXElQFgP8dSMaub_WS_A/formResponse";
-
     const entryCedula = "entry.668942367";
-
     const entryUbicacion = "entry.981761500";
-
     const entryIDJefe = "entry.817016646";
-
     const entryQR = "entry.256825743";
 
-
-
-    let ubicacionActual = "";
-
-
+    let ubicacionActual = "NO DISPONIBLE";
 
     navigator.geolocation.getCurrentPosition(
-
       pos => {
-
         const lat = pos.coords.latitude.toFixed(6);
-
         const lng = pos.coords.longitude.toFixed(6);
-
         ubicacionActual = `${lat}, ${lng}`;
-
       },
-
       err => {
-
-        alert("No se pudo obtener la ubicación GPS.");
-
+        console.warn("No se pudo obtener la ubicación GPS.");
       }
-
     );
 
+    async function solicitarCamara() {
+      try {
+        const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+        stream.getTracks().forEach(track => track.stop());
+        return true;
+      } catch (e) {
+        return false;
+      }
+    }
 
-
-    function iniciarEscaneo() {
-
+    async function iniciarEscaneo() {
       const cedula = document.getElementById("cedula").value.trim();
-
       const id_jefe = document.getElementById("id_jefe").value.trim();
 
-
-
       if (!cedula || !id_jefe) {
-
         alert("Por favor llena Cédula e ID Jefe.");
-
         return;
-
       }
 
-
+      const tieneCamara = await solicitarCamara();
+      if (!tieneCamara) {
+        alert("No se pudo acceder a la cámara. Por favor revisa los permisos.");
+        return;
+      }
 
       document.getElementById("reader").style.display = "block";
 
-
-
       const qrScanner = new Html5Qrcode("reader");
-
       qrScanner.start(
-
         { facingMode: "environment" },
-
         { fps: 10, qrbox: 250 },
-
         qrCodeMessage => {
-
           qrScanner.stop();
-
           document.getElementById("reader").style.display = "none";
 
-
-
           const formData = new FormData();
-
           formData.append(entryCedula, cedula);
-
           formData.append(entryIDJefe, id_jefe);
-
           formData.append(entryQR, qrCodeMessage);
-
           formData.append(entryUbicacion, ubicacionActual);
 
-
-
-
-          fetch(formURL, {
-
-
-            method: "POST",
-
-
-            mode: "no-cors",
-
-
-            body: formData
-
-
-          }).then(() => {
-
-
-            document.getElementById("resultado").innerText = "✔️ Registrado con éxito.";
-
-
-            document.getElementById("otraVez").style.display = "block";
-
-
-          }).catch(() => {
-
-
-            // 📴 Sin conexión: guardar localmente
-
-
-            const registro = {
-
-
-              cedula,
-
-
-              id_jefe,
-
-
-              qr: qrCodeMessage,
-
-
-              ubicacion: ubicacionActual,
-
-
-              fecha: new Date().toISOString()
-
-
-            };
-
-
-            let registros = JSON.parse(localStorage.getItem('registrosOffline')) || [];
-
-
-            registros.push(registro);
-
-
-            localStorage.setItem('registrosOffline', JSON.stringify(registros));
-
-
-
-
-
-            document.getElementById("resultado").innerText =
-
-
-              "📴 Sin conexión. El traslado fue guardado localmente.";
-
-
-          });
-
-
           if (navigator.onLine) {
-
-
             fetchConTimeout(formURL, {
-
-
               method: "POST",
-
-
               mode: "no-cors",
-
-
               body: formData
-
-
             }, 5000).then(() => {
-
-
-              document.getElementById("resultado").innerText = "✔️ Registrado con éxito.";
-
-
-              document.getElementById("otraVez").style.display = "block";
-
-
+              mostrarExito("✔️ Registrado con éxito.");
             }).catch(() => {
-
-
               guardarLocal(cedula, id_jefe, qrCodeMessage, ubicacionActual);
-
-
             });
-
-
           } else {
-
-
             guardarLocal(cedula, id_jefe, qrCodeMessage, ubicacionActual);
-
-
           }
-
         }
-
       );
-
     }
-
-
-
 
     function guardarLocal(cedula, id_jefe, qrCodeMessage, ubicacion) {
-
-
       const registro = {
-
-
         cedula,
-
-
         id_jefe,
-
-
         qr: qrCodeMessage,
-
-
         ubicacion,
-
-
         fecha: new Date().toISOString()
-
-
       };
-
-
       let registros = JSON.parse(localStorage.getItem('registrosOffline')) || [];
-
-
       registros.push(registro);
-
-
       localStorage.setItem('registrosOffline', JSON.stringify(registros));
+      mostrarExito("📴 Sin conexión. El traslado fue guardado localmente.");
+    }
 
-
-
-
-
-      document.getElementById("resultado").innerText =
-
-
-        "📴 Sin conexión. El traslado fue guardado localmente.";
-
-
+    function mostrarExito(mensaje) {
+      const boton = document.getElementById("btnRegistrar");
+      document.getElementById("resultado").innerText = mensaje;
+      boton.disabled = true;
+      boton.innerText = "✔ Registrado";
       document.getElementById("otraVez").style.display = "block";
-
-
     }
-
-
-
-
-    function enviarPendientes() {
-
-      let registros = JSON.parse(localStorage.getItem('registrosOffline')) || [];
-
-      if (registros.length === 0) return;
-
-
-
-      registros.forEach((r, i) => {
-
-        const formData = new FormData();
-
-        formData.append(entryCedula, r.cedula);
-
-        formData.append(entryIDJefe, r.id_jefe);
-
-        formData.append(entryQR, r.qr);
-
-        formData.append(entryUbicacion, r.ubicacion);
-
-
-
-        fetch(formURL, {
-
-          method: "POST",
-
-          mode: "no-cors",
-
-          body: formData
-
-        }).then(() => {
-
-          registros.splice(i, 1);
-
-          localStorage.setItem('registrosOffline', JSON.stringify(registros));
-
-          console.log("🔄 Registro sincronizado");
-
-        }).catch(err => {
-
-          console.error("❌ Error sincronizando:", err);
-
-        });
-
-      });
-
-    }
-
-
-
 
     function fetchConTimeout(url, options, timeout = 5000) {
-
-
       return new Promise((resolve, reject) => {
-
-
         const timer = setTimeout(() => reject(new Error("Tiempo agotado")), timeout);
-
-
         fetch(url, options).then(response => {
-
-
           clearTimeout(timer);
-
-
           resolve(response);
-
-
         }).catch(err => {
-
-
           clearTimeout(timer);
-
-
           reject(err);
-
-
         });
-
-
       });
-
-
     }
 
+    function enviarPendientes() {
+      let registros = JSON.parse(localStorage.getItem('registrosOffline')) || [];
+      if (registros.length === 0) return;
 
+      registros.forEach((r, i) => {
+        const formData = new FormData();
+        formData.append(entryCedula, r.cedula);
+        formData.append(entryIDJefe, r.id_jefe);
+        formData.append(entryQR, r.qr);
+        formData.append(entryUbicacion, r.ubicacion);
 
+        fetch(formURL, {
+          method: "POST",
+          mode: "no-cors",
+          body: formData
+        }).then(() => {
+          registros.splice(i, 1);
+          localStorage.setItem('registrosOffline', JSON.stringify(registros));
+          console.log("🔄 Registro sincronizado");
+        }).catch(err => {
+          console.error("❌ Error sincronizando:", err);
+        });
+      });
+    }
 
     window.addEventListener('online', enviarPendientes);
-
     document.addEventListener('DOMContentLoaded', enviarPendientes);
-
   </script>
-
-
 
   <script>
-
     if ('serviceWorker' in navigator) {
-
       navigator.serviceWorker.register('service-worker.js')
-
         .then(reg => console.log('✅ Service Worker registrado:', reg.scope))
-
         .catch(err => console.error('❌ Error al registrar SW:', err));
-
     }
-
   </script>
-
 </body>
-
 </html>
